# discos

./: .copilot-instructions.md  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  cylinder_morphology.npz  debug_vscode_freezes.py  gencomo.code-workspace  genus_test_results.txt  git_cleanup.py  preprocess_meshes.py  pyproject.toml  repair_ts2_mesh.py  requirements.txt  setup.py  test_connectivity_edge_case.py  test_genus.py  test_genus_simple.py  test_improved_viz.py  test_node_edge_segmenter.py  test_segment_viz.py  test_segmentation.py  test_visualization.py  test_viz_detailed.py
.windsurf/: extensions.json  settings.json
.windsurf/rules/: uv.md  workspace.md
data/mesh/: branching_demo.stl  torus_demo.stl  y_branch_demo.stl
data/polylines/: TS1.polylines.txt  TS2.polylines.txt
data/swc/: TS1_n11.swc  TS1_n12.swc  TS1_trace.swc  TS2_n21.swc  TS2_trace.swc  TS2_trace_equivalent_area.swc  TS2_trace_equivalent_perimeter.swc  TS2_trace_nearest_surface.swc  TS2_trace_section_circle_fit.swc  TS2_trace_section_median.swc
data/z_stack/: branching.npz  torus.npz
demo_meshes/: neuron.stl  y_branch.stl
demos/: 01b_torus_mesh.ipynb  02c_neuron_segmentation.ipynb
dev/demos/: 00_demo_index.ipynb  01a_cylinder_mesh.ipynb  01b_torus_mesh.ipynb  01c_neuron_mesh.ipynb  01d_TS2.ipynb  02a_cylinder_segmentation.ipynb  02b_torus_segmentation.ipynb  02c_neuron_segmentation.ipynb  02d_TS2_segmentation.ipynb  test_cylinder_viz.py
dev/old_modules/: regions.py
dev/old_python/: cli.py  conftest.py  core.py  git_cleanup.py
dev_storage/: 01c_branching_demo.ipynb  02a_cylinder_segmentation_backup.ipynb  02a_cylinder_segmentation_clean.ipynb  generate_test_meshes.py  mesh_testing.ipynb  voxels.py
dev_storage/demo_meshes/: multi_branch.stl
dev_storage/demos/: 02c_neuron_segmentation.ipynb
dev_storage/old_modules/: README.md
dev_storage/tutorials/: 01a_cylinder_mesh.ipynb  01b_torus_mesh.ipynb  (+2 more)
dev_storage/tutorials copy/: 01_tutorial_index.ipynb  01c_neuron_mesh.ipynb  02a_cylinder_segmentation.ipynb  02b_torus_segmentation.ipynb
discos/: __init__.py  demo.py  demos.py  mesh.py  path.py  polylines.py  segmentation.py  skeleton.py  trace.py  utils.py
docs/: discos.html  index.html  search.js
examples/: advanced_example.py  basic_example.py
extras/: hh.py
gencomo/: __init__.py  core.py  demos.py  graph.py  mesh.py  model.py  ode.py  parameters.py  segmentation.py  simulation.py  slicer.py  visualization.py  z_stack.py
gencomo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
notebooks/: 01a_cylinder_mesh.ipynb  01b_torus_mesh.ipynb  01c_neuron_mesh.ipynb  02a_cylinder_segmentation.ipynb  02a_cylinder_skeleton.ipynb  02b_torus_segmentation.ipynb  02b_torus_skeleton.ipynb  02c_neuron_segmentation.ipynb  02c_neuron_skeleton.ipynb  02d_TS2_segmentation.ipynb  02d_TS2_skeleton.ipynb  03a_ode_demo.ipynb  demo_polylines.ipynb  demo_trace.ipynb  mesh_testing.ipynb  segment_testing.ipynb  try_cgal.ipynb  try_skeletor.ipynb  ts_testing.ipynb
scripts/: debug_torus.py  diagnose_skeletonization.py  make_demo_meshes.py  preprocess_meshes.py  run_skeletonization.py
tests/: old_test_segmentation.py  test_connectivity_edge_case.py  test_core.py  test_guided_skeletonize.py  test_mesh.py  test_mesh_orientation.py  test_mesh_repair.py  test_polylines.py  test_polylines_demo.py  test_segmentation.py  test_simulation_comprehensive.py  test_single_compartment.py  test_single_compartment_corrected.py  test_single_compartment_simulation.py  test_skeleton.py  test_skeletonize.py  test_skeletonize_cylinder.py  test_swc.py  test_swc_export.py  test_trace_radius_modes.py
trash/: mesh_repair.py  old_segmentation.py  old_skeleton.py  old_test_skeleton.py  old_test_skeletonize_cylinder.py  old_test_swc.py
tutorials/: 01_demo_meshes.ipynb  01_demo_meshes_index.ipynb  01_introduction_to_gencomo.ipynb  01a_cylinder_demo.ipynb  01a_cylinder_zstack.ipynb  01b_branching_zstack.ipynb  01b_torus_demo.ipynb  01b_y_branch_zstack.ipynb  01c_branching_demo.ipynb  01c_hole_topology_zstack.ipynb  01c_neuron_demo.ipynb  01c_torus_zstack.ipynb  01d_neuron_demo.ipynb  02_segmentation_demo.ipynb  02a_cylinder_segmentation.ipynb  02b_torus_segmentation.ipynb  02c_neuron_segmentation.ipynb  03_complete_simulation_demo.ipynb
z_stack_data/: cylinder.npz  cylinder_with_hole.npz  y_shaped.npz
(+13 files in other folders)
